# feroxim

./: .gitignore  CMakeLists.txt  README.md
FxBase/: CMakeLists.txt  FxBaseLinkDef.h  TFxAccount.cxx  TFxAccount.h  TFxPredictor.cxx  TFxPredictor.h  TFxPredictorObj.cxx  TFxPredictorObj.h  TFxRateObj.cxx  TFxRateObj.h  TFxRateSelector.cxx  TFxRateSelector.h  TFxTrade.cxx  TFxTrade.h
FxBase/PROOF-INF/: SETUP.C
cmake/modules/: root-utils.cmake
cmake/tmpl/: TFxExample.cxx  TFxExample.h  tmpl.sh
macros/: ConvertCvsToRoot.C  GeneratePredictors.C  MainRun.C  files.txt  files_eos.txt
scripts/: run.sh  runBatch.sh
